# flutter-rocket-discord-server

./: Cargo.toml  Rocket.toml
src/: main.rs  postgres.rs
src/server/: handlers.rs  models.rs
