[package]
name = "flutter-rocket-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "uuid", "secrets"] }
tokio-postgres = { version = "0.7.7", features = ["with-uuid-1"]}
uuid = { version = "1.0", features = ["v4"] }

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["deadpool_postgres"]

[dependencies.deadpool]
version = "0.9.2"
default-features = false
features = ["managed"]